--- a/VRChat/38/957938.html
+++ b/VRChat/38/957938.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HNympxYa70R2gj7YPulE77DqEjBLehy1SEbEYcvDLPs="></script>
+    "U8ZkrrssOGsgeH/2akyzppiJkF0sxHVOTUnOm4tGnxk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武器「ライオンシュレッダーレプリカ」【VRChat向け】","description":"--------------------------------------------------\n\n◆ライオンシュレッダーレプリカ\n\nUnity（主にVRChat）で使える可変武器「ライオンシュレッダーレプリカ」です。\nご自身のアバターに持たせる、敵キャラに持たせるなどしてお使い下さい。\n\n--------------------------------------------------\n\n◆「ライオンシュレッダーレプリカ.unitypackage」の中身と情報\n\n□ライオンシュレッダーレプリカ\n┣□Materials\n┃┣□1024\n┃┃┣〇BaceColor.png\t：ベーステクスチャ\n┃┃┣〇Metallic.png\t：メタリックテクスチャ\n┃┃┗〇NormalMap.png\t：ノーマルマップテクスチャ\n┃┗〇Material.mat\t：マテリアル（ノーマルシェーダー）\n┣〇ノコギリ稼働.anim\t\t\t：アニメーションファイル\n┣〇ノコギリ稼働.controller\t\t：設定済コントローラー\n┣〇ライオンシュレッダーレプリカ.fbx\t：モデルデータ\n┣〇ライオンシュレッダーレプリカ.prefab\t：設定済プレハブ\n┣〇刀身展開.anim\t\t\t：アニメーションファイル\n┗〇刀身展開.controller\t\t\t：設定済コントローラー\n\nポリゴン数\t：△3110\nBlendShapes\t：■排気口一括交換\n\t\t：■ヒートシンク一括交換\n\t\t：■パーツ一括伸縮\n\t\t：■左外ノコギリ稼働\n\t\t：■左内ノコギリ稼働\n\t\t：■右内ノコギリ稼働\n\t\t：■右外ノコギリ稼働\n\n--------------------------------------------------\n\n◆注意事項\n\nこの武器はBlendShapesとRotationで操作を行っています。\nモード切替のアニメーション設定済コントローラーを付属しています。\nprefabを使えばアニメーションの設定が少し楽になるのでお使い下さい。\n\nこのライオンシュレッダーレプリカはその名の通りレプリカです。\n特注品のオリジナルを機能削減してテクスチャも簡易化したものになります。\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）\n◆Lion_pug（オリジナルの制作依頼者）","url":"https://booth.pm/ja/items/957938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/957938/0fefe151-14ff-4b65-9a68-2ebeb4bd2262_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HNympxYa70R2gj7YPulE77DqEjBLehy1SEbEYcvDLPs="></script>
+    nonce="U8ZkrrssOGsgeH/2akyzppiJkF0sxHVOTUnOm4tGnxk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/957938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/957938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
