--- a/VRChat/10/957910.html
+++ b/VRChat/10/957910.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eTxwZpP90edT1y9NKI44ASBS8PuqdNXA4HgInsMhWlY="></script>
+    "5Nrs6L3JgTqzIJeMSkS4wsL8cZ56eG/7IeEbi/hPhYI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け","description":"VRchat向けめんだこ：めんだこ\n\nポリゴン数590のFBXファイルと\n上記のテクスチャが入っております\n\n商用利用・私的利用に対してご自由にお使いください\n大々的な再配布はお止めください","url":"https://booth.pm/ja/items/957910","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/957910/f371be70-aec4-4b21-835b-1768881821ec_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eTxwZpP90edT1y9NKI44ASBS8PuqdNXA4HgInsMhWlY="></script>
+    nonce="5Nrs6L3JgTqzIJeMSkS4wsL8cZ56eG/7IeEbi/hPhYI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/957910/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/957910/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
