--- a/VRChat/52/944052.html
+++ b/VRChat/52/944052.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CJcICbub20EYpwYCMahOWZjjELWQFgHEk8ciE3sf+0k="></script>
+    "b7pdyWJxLTrAdPy+r9CPd0NWusBQJkXbkyaMN07s9Ac="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メイド服（ひとつめ製）","description":"メイド服です。\nボーンウェイト設定されていません。\nテクスチャありません。UV展開はされています。\n\n画像はマテリアルの着色のみの状態となります。\nモデルは画像中の服飾のみとなります。\n＊ひとつめちゃんは付いてきません\n＊眼鏡はついてきません\n＊耳もついてきません","url":"https://booth.pm/ja/items/944052","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/574569af-e656-434d-9162-62acab0c5195/i/944052/1e94ea17-830c-4531-9a0e-4870f87f0bce_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CJcICbub20EYpwYCMahOWZjjELWQFgHEk8ciE3sf+0k="></script>
+    nonce="b7pdyWJxLTrAdPy+r9CPd0NWusBQJkXbkyaMN07s9Ac="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944052/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944052/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
