--- a/VRChat/95/957195.html
+++ b/VRChat/95/957195.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gupsH/GDYLj+bCMTemBh8QycMB6/ome87SqgrMkCDuQ="></script>
+    "/sr+bnCZgdQhUE/LTNa065UnDGPxV9H+JVothO/inL0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat用フリーアバター】おしゃぶりマン","description":"VRChat用フリーアバター　おしゃぶりマンです。\nHPにて無料で公開しているものをこちらでも配布できるようにしました。\n\n以前、Twitterでおしゃぶりの3Dモデルを配布したところ好評だったので、調子に乗ってネタで作ったアバターですw\n\nVRChatで個人で遊んでいただく分にはほぼ制限なしでご利用いただけますが、一応、クリエイティブ・コモンズ 表示 4.0 国際 ライセンスで配布していますので、細かい規約は\n\nhttp://toy-box.link/download/oshaburiman.html\n\n↑こちらをご確認下さい。","url":"https://booth.pm/ja/items/957195","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/957195/804768cf-a046-41e5-856b-44035f3bd7e8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gupsH/GDYLj+bCMTemBh8QycMB6/ome87SqgrMkCDuQ="></script>
+    nonce="/sr+bnCZgdQhUE/LTNa065UnDGPxV9H+JVothO/inL0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/957195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/957195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
