--- a/VRChat/27/954227.html
+++ b/VRChat/27/954227.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "M00gqj4jjHS1pB5ErU3O5WgZF3WJo+g/GDxfzwBuAIE="></script>
+    "5ovFjiYw2fILXj7xQsL2GuNkG+0jBa5b8ucTD82c4YU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCHAT用】猫（表情・Anim付き）ボーン設定済み","description":"VRChat用アクセサリー\n・内容\n猫のfbxファイル\nテクスチャ６種(黒猫、白猫、トラ猫、トラネコnew、くつしたnew、ハチワレnew)\n猫用Animファイル（ごろごろ、歩行、座り、ジャンプ）\n\n・仕様\n猫：1460ポリゴン\n　ボーン設定しているため動かせます。\n　表情用シェイプキー付き（笑顔、口パク、耳ぴこぴこ、目拡大、目縮小、ジト目）\n\n\n可：改変、商用利用\n　VRCHAT内での利用、アバターペダステルやワールドの素材として使用可です。\n不可：二次配布・本データを含めた販売、作者詐称\n\n2021/06/01 ver1.02 LegacyAnimeファイルを修正。\n2018/08/28 ver1.01 テクスチャ3種類追加、prefab追加しました","url":"https://booth.pm/ja/items/954227","offers":{"priceCurrency":"JPY","@type":"Offer","price":"280"},"image":"https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/954227/3919dbc8-b5db-401b-8fc5-d578ded46120_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="M00gqj4jjHS1pB5ErU3O5WgZF3WJo+g/GDxfzwBuAIE="></script>
+    nonce="5ovFjiYw2fILXj7xQsL2GuNkG+0jBa5b8ucTD82c4YU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/954227/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               145
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/954227/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               145
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
