--- a/VRChat/71/952471.html
+++ b/VRChat/71/952471.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PuzhnpoU2QaXFsO4QxLT/foGFLBQ3tRMF54qqVChyzw="></script>
+    "mpPLe1sWKUoCPMHNylSlzKNy3gJTu2WI+2R3cJ7sEOc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けボードゲームコンポーネント","description":"お試しでVRchatでの使用を想定したボードゲームコンポーネントを配布します。\nボクセルで作りました。\n\nCopyright free\n著作権フリーです。改変、販売、商用、自作発言OKです。\n当商品の使用中に生じたいかなる損害も制作者は一切の責任を負いかねます。","url":"https://booth.pm/ja/items/952471","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/7a31e5ab-8f88-4017-a32d-2fa9859ae105/i/952471/89b12260-cc02-45d4-af19-352ee6edf423_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PuzhnpoU2QaXFsO4QxLT/foGFLBQ3tRMF54qqVChyzw="></script>
+    nonce="mpPLe1sWKUoCPMHNylSlzKNy3gJTu2WI+2R3cJ7sEOc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/952471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/952471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
