--- a/VRChat/28/948128.html
+++ b/VRChat/28/948128.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CCTz5n4IAahJD13kOvyel7HlM7lSVZtdqkPKXJ/Fr1Q="></script>
+    "caNgqbmBxbKNSrzo34BIwOGCQL0z4XrQjZO78xmrRs8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Barong(可変突撃槍砲)","description":"\u003c概要\u003e\n白と金を基調としたアニメーション付き突撃槍です。起動モーションと爆発用の回転モーションがあります。ワールド座標に固定もできます。6個のパーツからできています。\n\n\u003c中身\u003e\n・unitypackage(prefab,fbx,texture,material,animation,animatorなど)\n・read me\n\n\u003cアニメーションの使い方(VRchat向け)\u003e\nanimatorで管理されているので、同封されているprefab自体をenabledするとanimationが勝手に再生されます。つまり、animation overrideで直接親をenabledさせてください。また、ワールド座標の固定は同封しているanimation overrideをご覧下さい。\n\n\u003cアニメーション\u003e\n＊動画ではパーティクルがでていますが、付属しておりません。また、テクスチャが一部違います。アニメーション確認としてご覧ください。\nhttps://twitter.com/AcysShiaruReus/status/1024985372776747008\n\n\n\u003c規約の目安\u003e\n規約は同封のread meに書いてあります。これは目安としてください。これは規約ではありません。\n・商業利用可\n・二次配布、3Dモデルとしての販売の禁止\n・著作権はすべてAcysShiaruReusに帰属する\n\n\u003cお知らせ\u003e\n1.1\n・vrcsdkなどの含めてはいけないものの削除\n・ファイルがわかりずらかったので、整理をしました","url":"https://booth.pm/ja/items/948128","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/2d13a0c0-2756-4fa9-b3b6-77f3f8714856/i/948128/46e9a47c-045d-4a26-ac13-6d43f7ebcd5f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CCTz5n4IAahJD13kOvyel7HlM7lSVZtdqkPKXJ/Fr1Q="></script>
+    nonce="caNgqbmBxbKNSrzo34BIwOGCQL0z4XrQjZO78xmrRs8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/948128/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/948128/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
